GrammarParser.py
# Generated from F:\ScenarioGrammar\ScenarioGrammar\Grammar.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys

 
from LanguagePart import LoadGrammar,LanguagePart
import re



class GrammarParser ( Parser ):

    grammarFileName = "Grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'};'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'inform the Mayor'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SCENARIO_NAME", "FACTOR", "SUBJECT", "ACTION", "SPACES" ]

    RULE_lis_of_scenario = 0
    RULE_scenario = 1
    RULE_list_of_events = 2
    RULE_events = 3
    RULE_effect_of_the_factor = 4
    RULE_list_of_faktor = 5
    RULE_subjects_action = 6

    ruleNames =  [ "lis_of_scenario", "scenario", "list_of_events", "events", 
                   "effect_of_the_factor", "list_of_faktor", "subjects_action" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    SCENARIO_NAME=4
    FACTOR=5
    SUBJECT=6
    ACTION=7
    SPACES=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    RealQueri=""
    scenarioName=[]
    scenarioEvent=[]
    scenarioIndex=0
    ErrorCh=False
    ErrorMSG=""
    def GetTok(self):
    	Grammar=LoadGrammar()
    	PartLanguage=Grammar.OpenFileGrammar()
    	#PartLanguage.ReadTok()
    	self.Faktors=PartLanguage.GetFaktors()
    	self.Subjekt=PartLanguage.GetSubject()
    	self.Action=PartLanguage.GetAction()
    def GetQueri(self):
    	print(self.scenarioName)
    	print(self.scenarioEvent)
    def RmSpace(self,s):
    	s = re.sub(" +", " ", s)
    	return s.strip()
    def ChToken(self,tok, tokName):
    	if tokName=="f":
    		for tmptok in tok.split(','):
    			if self.RmSpace(tmptok.split('=')[0]) not in self.Faktors:
    				self.ErrorCh=True
    				self.ErrorMSG="Фактору "+self.RmSpace(tmptok.split('=')[0])+" не існує"
    	if tokName=="s" and self.RmSpace(tok.split(':')[0]) not in self.Subjekt:
    		print(self.Subjekt)
    		print(tok)
    		self.ErrorCh=True
    		self.ErrorMSG="Об'экту  "+tok.split(':')[0]+" не існує"
    	if tokName=="a" and self.RmSpace(tok.strip()) not in self.Action:
    		self.ErrorCh=True
    		self.ErrorMSG="Дії  "+tok+" не існує"
    	self.scenarioEvent[self.scenarioIndex].append(self.RmSpace(tok.split(':')[0]))


    class Lis_of_scenarioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scenario(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.ScenarioContext)
            else:
                return self.getTypedRuleContext(GrammarParser.ScenarioContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_lis_of_scenario

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLis_of_scenario" ):
                listener.enterLis_of_scenario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLis_of_scenario" ):
                listener.exitLis_of_scenario(self)




    def lis_of_scenario(self):

        localctx = GrammarParser.Lis_of_scenarioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_lis_of_scenario)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.scenario()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==GrammarParser.SCENARIO_NAME):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScenarioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._SCENARIO_NAME = None # Token

        def SCENARIO_NAME(self):
            return self.getToken(GrammarParser.SCENARIO_NAME, 0)

        def list_of_events(self):
            return self.getTypedRuleContext(GrammarParser.List_of_eventsContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_scenario

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScenario" ):
                listener.enterScenario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScenario" ):
                listener.exitScenario(self)




    def scenario(self):

        localctx = GrammarParser.ScenarioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_scenario)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            localctx._SCENARIO_NAME = self.match(GrammarParser.SCENARIO_NAME)
            self.scenarioName.append((None if localctx._SCENARIO_NAME is None else localctx._SCENARIO_NAME.text))
            self.state = 21
            self.match(GrammarParser.T__0)
            self.state = 22
            self.list_of_events()
            self.state = 23
            self.match(GrammarParser.T__1)
            self.scenarioIndex+=1
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_of_eventsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def events(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarParser.EventsContext)
            else:
                return self.getTypedRuleContext(GrammarParser.EventsContext,i)


        def getRuleIndex(self):
            return GrammarParser.RULE_list_of_events

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_of_events" ):
                listener.enterList_of_events(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_of_events" ):
                listener.exitList_of_events(self)




    def list_of_events(self):

        localctx = GrammarParser.List_of_eventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_list_of_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.events()
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GrammarParser.T__2:
                self.state = 27
                self.match(GrammarParser.T__2)
                self.state = 28
                self.events()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EventsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def effect_of_the_factor(self):
            return self.getTypedRuleContext(GrammarParser.Effect_of_the_factorContext,0)


        def subjects_action(self):
            return self.getTypedRuleContext(GrammarParser.Subjects_actionContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_events

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents" ):
                listener.enterEvents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents" ):
                listener.exitEvents(self)




    def events(self):

        localctx = GrammarParser.EventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_events)
        try:
            self.state = 38
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GrammarParser.FACTOR]:
                self.enterOuterAlt(localctx, 1)
                self.scenarioEvent.append([])
                self.state = 35
                self.effect_of_the_factor()
                pass
            elif token in [GrammarParser.SUBJECT]:
                self.enterOuterAlt(localctx, 2)
                self.scenarioEvent.append([])
                self.state = 37
                self.subjects_action()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Effect_of_the_factorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._list_of_faktor = None # List_of_faktorContext

        def list_of_faktor(self):
            return self.getTypedRuleContext(GrammarParser.List_of_faktorContext,0)


        def getRuleIndex(self):
            return GrammarParser.RULE_effect_of_the_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEffect_of_the_factor" ):
                listener.enterEffect_of_the_factor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEffect_of_the_factor" ):
                listener.exitEffect_of_the_factor(self)




    def effect_of_the_factor(self):

        localctx = GrammarParser.Effect_of_the_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_effect_of_the_factor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            localctx._list_of_faktor = self.list_of_faktor()
            self.scenarioEvent[self.scenarioIndex].append((None if localctx._list_of_faktor is None else self._input.getText((localctx._list_of_faktor.start,localctx._list_of_faktor.stop))))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_of_faktorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FACTOR(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarParser.FACTOR)
            else:
                return self.getToken(GrammarParser.FACTOR, i)

        def getRuleIndex(self):
            return GrammarParser.RULE_list_of_faktor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList_of_faktor" ):
                listener.enterList_of_faktor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList_of_faktor" ):
                listener.exitList_of_faktor(self)




    def list_of_faktor(self):

        localctx = GrammarParser.List_of_faktorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list_of_faktor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(GrammarParser.FACTOR)
            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 44
                    self.match(GrammarParser.T__2)
                    self.state = 45
                    self.match(GrammarParser.FACTOR) 
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Subjects_actionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._SUBJECT = None # Token
            self._list_of_faktor = None # List_of_faktorContext
            self._SCENARIO_NAME = None # Token

        def SUBJECT(self):
            return self.getToken(GrammarParser.SUBJECT, 0)

        def list_of_faktor(self):
            return self.getTypedRuleContext(GrammarParser.List_of_faktorContext,0)


        def SCENARIO_NAME(self):
            return self.getToken(GrammarParser.SCENARIO_NAME, 0)

        def getRuleIndex(self):
            return GrammarParser.RULE_subjects_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubjects_action" ):
                listener.enterSubjects_action(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubjects_action" ):
                listener.exitSubjects_action(self)




    def subjects_action(self):

        localctx = GrammarParser.Subjects_actionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subjects_action)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                localctx._SUBJECT = self.match(GrammarParser.SUBJECT)
                self.ChToken((None if localctx._SUBJECT is None else localctx._SUBJECT.text),'s')
                self.state = 53
                localctx._list_of_faktor = self.list_of_faktor()
                self.ChToken((None if localctx._list_of_faktor is None else self._input.getText((localctx._list_of_faktor.start,localctx._list_of_faktor.stop))),'f')
                self.state = 55
                localctx._SCENARIO_NAME = self.match(GrammarParser.SCENARIO_NAME)
                self.ChToken((None if localctx._SCENARIO_NAME is None else localctx._SCENARIO_NAME.text), 'a')
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                localctx._SUBJECT = self.match(GrammarParser.SUBJECT)
                self.scenarioEvent[self.scenarioIndex].append((None if localctx._SUBJECT is None else localctx._SUBJECT.text))
                self.state = 60
                localctx._SCENARIO_NAME = self.match(GrammarParser.SCENARIO_NAME)
                self.scenarioEvent[self.scenarioIndex].append((None if localctx._SCENARIO_NAME is None else localctx._SCENARIO_NAME.text))
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





